# scarlettmixer

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  ChangeLog.md  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README  README.md  ScarlettMixer.desktop  configure.ac  meson.build
doc/: Design.md
src/: Makefile.am  config.h.in  meson.build  org.alsa.scarlettmixer.gschema.xml  scarlettmixer.c  scarlettmixer.css  scarlettmixer.h  scarlettmixerapp.c  scarlettmixerapp.gresource.xml  scarlettmixerapp.h  scarlettmixerappwin.c  scarlettmixerappwin.h  scarlettmixerappwin.ui  scarlettmixermenu.ui  scarlettmixerstrip.c  scarlettmixerstrip.css  scarlettmixerstrip.h  scarlettmixerstrip.ui  sm-app.c  sm-app.gresource.xml  sm-app.h  sm-appmenu.ui  sm-appwin.c  sm-appwin.css  sm-appwin.h  sm-appwin.ui  sm-channel.c  sm-channel.h  sm-mix-strip.c  sm-mix-strip.h  sm-mix-strip.ui  sm-prefs.c  sm-prefs.h  sm-prefsdialog.ui  sm-source.c  sm-source.h  sm-strip.c  sm-strip.css  sm-strip.h  sm-strip.ui  (+2 more)
